--- a/config-as-code/environments/egov-demo.yaml
+++ b/config-as-code/environments/egov-demo.yaml
@@ -1,5 +1,5 @@
 global:
-   domain: health-demo.digit.org ## Add your Domain Name "Eg: site.mydomain.com" Do not use the dummy domain
+   domain: health-test.digit.org ## Add your Domain Name "Eg: site.mydomain.com" Do not use the dummy domain
    setup: fullsetup
 
 cluster-configs:
@@ -13,11 +13,11 @@ cluster-configs:
         egov-config:
             namespace: [ egov, monitoring ]
             data:
-                db-host: healthdemo-upgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432 ## Add db-host name eg: egov-demo.database.azure.com
-                db-name: healthdemo ## Add db-name
-                db-url: jdbc:postgresql://healthdemo-upgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthdemo ## example: jdbc:postgresql://egov-demo.postgres.database.azure.com:5432/egov_demo
-                domain: health-demo.digit.org ## Add your Domain Name    
-                egov-services-fqdn-name: https://health-demo.digit.org/ ## Add your Domain Name
+                db-host: healthtest-k8supgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432 ## Add db-host name eg: egov-demo.database.azure.com
+                db-name: healthtest ## Add db-name
+                db-url: jdbc:postgresql://healthtest-k8supgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtest ## example: jdbc:postgresql://egov-demo.postgres.database.azure.com:5432/egov_demo
+                domain: health-test.digit.org ## Add your Domain Name
+                egov-services-fqdn-name: https://health-test.digit.org/ ## Add your Domain Name
                 
                 egov-state-level-tenant-id: "mz"
                 s3-assets-bucket: "(pg-health-egov-assets|egov-health-playground-assets)"
@@ -108,7 +108,7 @@ employee:
     sub_filter.conf: "
       sub_filter  '<head>' '<head>
       <script src=https://unpkg.com/@egovernments/telemetry@0.0.2/dist/egov-telemetry-1557467338.js type=text/javascript></script>
-      <script src=https://egov-health-demo-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
+      <script src=https://egov-health-test-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
       ';"
 
 citizen:
@@ -116,7 +116,7 @@ citizen:
     sub_filter.conf: "
       sub_filter  '<head>' '<head>
       <script src=https://unpkg.com/@egovernments/telemetry@0.0.2/dist/egov-telemetry-1557467338.js type=text/javascript></script>
-      <script src=https://egov-health-demo-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
+      <script src=https://egov-health-test-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
       ';"
 
 workbench-ui:
@@ -129,7 +129,7 @@ digit-ui:
   custom-js-injection: |
     sub_filter.conf: "
       sub_filter  '<head>' '<head>
-      <script src=https://egov-health-demo-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
+      <script src=https://egov-health-test-assets.s3.ap-south-1.amazonaws.com/globalConfigs.js type=text/javascript></script>
       ';"
 egov-filestore:
   volume: /opt/eGov/filestore
@@ -324,7 +324,7 @@ pdf-service:
 # financials >>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
 egf-master:
-  db-url: "jdbc:postgresql://health-eks-demo-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthdemo"
+  db-url: "jdbc:postgresql://health-eks-test-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtest"
   memory_limits: 512Mi
   heap: "-Xmx256m -Xms256m"
 # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
