--- a/config-as-code/environments/egov-demo.yaml
+++ b/config-as-code/environments/egov-demo.yaml
@@ -14,8 +14,8 @@ cluster-configs:
             namespace: [ egov, monitoring ]
             data:
                 db-host: healthtest-k8supgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432 ## Add db-host name eg: egov-demo.database.azure.com
-                db-name: healthtest ## Add db-name
-                db-url: jdbc:postgresql://healthtest-k8supgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtest ## example: jdbc:postgresql://egov-demo.postgres.database.azure.com:5432/egov_demo
+                db-name: healthtestdb ## Add db-name
+                db-url: jdbc:postgresql://healthtest-k8supgrade-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtestdb ## example: jdbc:postgresql://egov-demo.postgres.database.azure.com:5432/egov_demo
                 domain: health-test.digit.org ## Add your Domain Name
                 egov-services-fqdn-name: https://health-test.digit.org/ ## Add your Domain Name
                 
@@ -246,7 +246,7 @@ egov-mdms-service:
   mdms-path: "/work-dir/health-campaign-mdms/data"
   initContainers:
     gitSync:
-      repo: "git@github.com:egovernments/health-campaign-mdms"   ##### Change repo url with Your fork Repo url
+      repo: "git@github.com:sivajiganesh-dev/health-campaign-mdms"   ##### Change repo url with Your fork Repo url
       branch: "DEMO"                                        ##### Change repo branch with Your fork Repo branch
   mdms-folder: "health-campaign-mdms"
   masters-config-url: "file:///work-dir/health-campaign-mdms/master-config.json"
@@ -257,7 +257,7 @@ egov-indexer:
   memory_limits: "768Mi"
   initContainers:
     gitSync:
-      repo: "git@github.com:egovernments/health-campaign-config"        ##### Change repo url with Your fork Repo url
+      repo: "git@github.com:sivajiganesh-dev/health-campaign-config"        ##### Change repo url with Your fork Repo url
       branch: "DEMO"                                      ##### Change repo branch with Your fork Repo branch
   egov-indexer-yaml-repo-path: "file:///work-dir/health-campaign-config/egov-indexer/error-queue.yml,file:///work-dir/health-campaign-config/egov-indexer/product-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/project-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/individual-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/household-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/project-task-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/stock-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/facility-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/project-staff-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/egov-error-queue-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/pgr-services.yml,file:///work-dir/health-campaign-config/egov-indexer/service-request-indexer.yml,file:///work-dir/health-campaign-config/egov-indexer/referral-management-indexer.yml"
 
@@ -270,7 +270,7 @@ egov-persister:
 
   initContainers:
     gitSync:
-      repo: "git@github.com:egovernments/health-campaign-config"      ##### Change repo url with Your fork Repo url
+      repo: "git@github.com:sivajiganesh-dev/health-campaign-config"      ##### Change repo url with Your fork Repo url
       branch: "DEMO"                                    ##### Change repo branch with Your fork Repo branch
 
 egov-data-uploader:
@@ -324,7 +324,7 @@ pdf-service:
 # financials >>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
 egf-master:
-  db-url: "jdbc:postgresql://health-eks-test-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtest"
+  db-url: "jdbc:postgresql://health-eks-test-db.cqqfmghbjssw.ap-south-1.rds.amazonaws.com:5432/healthtestdb"
   memory_limits: 512Mi
   heap: "-Xmx256m -Xms256m"
 # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
