--- a/config-as-code/environments/egov-demo.yaml
+++ b/config-as-code/environments/egov-demo.yaml
@@ -73,7 +73,7 @@ cluster-configs:
               egov-localization: "http://egov-localization:8080/"
               egov-idgen: "http://egov-idgen:8080/"
               egov-otp: "http://egov-otp:8080/"
-              egov-mdms-service: "http://egov-mdms-service:8080/"
+              egov-mdms-service: "http://mdms-v2:8080/"
               mdms-v2: "http://mdms-v2:8080/"
               egov-workflow: "http://egov-workflow:8080/"
               egov-workflow-v2: "http://egov-workflow-v2:8080/"
