--- a/config-as-code/helm/charts/business-services/finance-collections-voucher-consumer/values.yaml
+++ b/config-as-code/helm/charts/business-services/finance-collections-voucher-consumer/values.yaml
@@ -38,6 +38,8 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_SERVICES_EGFINSTRUMENT_HOSTNAME
     valueFrom:
       configMapKeyRef:
