--- a/config-as-code/helm/charts/core-services/chatbot/chatbot-values.yaml
+++ b/config-as-code/helm/charts/core-services/chatbot/chatbot-values.yaml
@@ -81,6 +81,8 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: zuul
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
   - name: SPRING_FLYWAY_ENABLED
     value: "false"
   - name: SERVER_SERVLET_CONTEXT_PATH
