--- a/config-as-code/helm/charts/core-services/mailbot/values.yaml
+++ b/config-as-code/helm/charts/core-services/mailbot/values.yaml
@@ -84,6 +84,8 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
   - name: SERVER_SERVLET_CONTEXT_PATH
     value: "/mailbot"
   - name: EGOV_ROOT_TENANT_ID
