--- a/config-as-code/helm/charts/core-services/nlp-engine/values.yaml
+++ b/config-as-code/helm/charts/core-services/nlp-engine/values.yaml
@@ -28,3 +28,5 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-mdms-service
+  - name: EGOV_MDMS_SEARCH_ENDPOINT
+    value: "/mdms-v2/v1/_search"
