--- a/config-as-code/helm/charts/health-services/stock/values.yaml
+++ b/config-as-code/helm/charts/health-services/stock/values.yaml
@@ -161,7 +161,7 @@ env: |
         name: egov-service-host
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: "/egov-mdms-service/v1/_search"
+    value: "/mdms-v2/v1/_search"
   - name: EGOV.MDMS.MASTER.NAME
   - name: EGOV.MDMS.MASTER.NAME
   - name: EGOV.MDMS.INTEGRATION.ENABLED
