--- a/config-as-code/helm/charts/core-services/egov-workflow-v2/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-workflow-v2/values.yaml
@@ -58,6 +58,10 @@ env: |
         key: egov-state-level-tenant-id
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_USER_HOST
     valueFrom:
       configMapKeyRef:
