--- a/config-as-code/helm/charts/core-services/xstate-webchat/values.yaml
+++ b/config-as-code/helm/charts/core-services/xstate-webchat/values.yaml
@@ -76,6 +76,10 @@ env: |
         key: zuul
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: URL_SHORTNER_HOST
     valueFrom:
       configMapKeyRef:
