--- a/config-as-code/helm/charts/municipal-services/pgr-services/values.yaml
+++ b/config-as-code/helm/charts/municipal-services/pgr-services/values.yaml
@@ -98,7 +98,11 @@ env: |
         name: egov-service-host
         key: egov-user
   - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: "/egov-mdms-service/v1/_search"
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: PGR_KAFKA_CREATE_TOPIC
     value: "save-pgr-request"
   - name: PGR_KAFKA_UPDATE_TOPIC
