--- a/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
+++ b/config-as-code/helm/charts/business-services/dashboard-analytics/values.yaml
@@ -74,6 +74,10 @@ env: |
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV_STATELEVEL_TENANTID
     valueFrom:
       configMapKeyRef:
