--- a/config-as-code/helm/charts/business-services/egov-apportion-service/values.yaml
+++ b/config-as-code/helm/charts/business-services/egov-apportion-service/values.yaml
@@ -50,6 +50,10 @@ env: |
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: JAVA_OPTS
     value: {{ index .Values "heap" | quote }}
   - name: JAVA_ARGS
