--- a/config-as-code/helm/charts/core-services/egov-idgen/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-idgen/values.yaml
@@ -51,6 +51,10 @@ env: |
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: SECURITY_BASIC_ENABLED
     value: "false"  
   - name: MANAGEMENT_SECURITY_ENABLED
