--- a/config-as-code/helm/charts/health-services/stock/values.yaml
+++ b/config-as-code/helm/charts/health-services/stock/values.yaml
@@ -162,6 +162,10 @@ env: |
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: EGOV.MDMS.MASTER.NAME
   - name: EGOV.MDMS.MASTER.NAME
   - name: EGOV.MDMS.INTEGRATION.ENABLED
