--- a/config-as-code/helm/charts/health-services/transformer/values.yaml
+++ b/config-as-code/helm/charts/health-services/transformer/values.yaml
@@ -111,6 +111,10 @@ env: |
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
     value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: PROJECT_MDMS_MODULE
     value: "HCM-PROJECT-TYPES"
   - name: EGOV_INDIVIDUAL_HOST
