--- a/config-as-code/helm/charts/municipal-services/egov-user-event/values.yaml
+++ b/config-as-code/helm/charts/municipal-services/egov-user-event/values.yaml
@@ -38,7 +38,11 @@ env: |
         name: egov-service-host
         key: egov-mdms-service
   - name: EGOV_MDMS_SEARCH_ENDPOINT
-    value: /egov-mdms-service/v1/_search
+    value: "/mdms-v2/v1/_search"
+  - name: EGOV_MDMS_PATH
+    value: "/mdms-v2/v1/_search"
+  - name: MDMS_PATH
+    value: "/mdms-v2/v1/_search"
   - name: SPRING_KAFKA_CONSUMER_GROUP_ID
     value: egov-user-events
   - name: SPRING_KAFKA_PRODUCER_KEY_SERIALIZER
