--- a/config-as-code/helm/charts/core-services/egov-idgen/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-idgen/values.yaml
@@ -55,6 +55,8 @@ env: |
     value: "/mdms-v2/v1/_search"
   - name: MDMS_PATH
     value: "/mdms-v2/v1/_search"
+  - name: MDMS_SERVICE_SEARCH_URI
+    value: "/mdms-v2/v1/_search"
   - name: SECURITY_BASIC_ENABLED
     value: "false"  
   - name: MANAGEMENT_SECURITY_ENABLED
